--- a/src/main/resources/hu/petrik/jungkatalin_javafxrestclientdolgozat/update-view.fxml
+++ b/src/main/resources/hu/petrik/jungkatalin_javafxrestclientdolgozat/update-view.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Spinner?>
 <?import javafx.scene.control.TextField?>
@@ -9,7 +10,7 @@
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 
-<GridPane hgap="20.0" prefHeight="480.0" prefWidth="640.0" vgap="20.0" xmlns="http://javafx.com/javafx/null" xmlns:fx="http://javafx.com/fxml/1" fx:controller="hu.petrik.jungkatalin_javafxrestclientdolgozat.UpdateController">
+<GridPane hgap="20.0" prefHeight="480.0" prefWidth="640.0" vgap="20.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="hu.petrik.jungkatalin_javafxrestclientdolgozat.UpdateController">
     <columnConstraints>
         <ColumnConstraints minWidth="50.0" prefWidth="50.0" />
         <ColumnConstraints hgrow="ALWAYS" minWidth="100.0" />
@@ -18,7 +19,8 @@
         <RowConstraints minHeight="10.0" />
         <RowConstraints minHeight="10.0" prefHeight="30.0" />
         <RowConstraints minHeight="10.0" prefHeight="30.0" />
-        <RowConstraints minHeight="10.0" prefHeight="30.0" valignment="TOP" vgrow="SOMETIMES" />
+        <RowConstraints minHeight="10.0" valignment="TOP" vgrow="SOMETIMES" />
+      <RowConstraints />
     </rowConstraints>
     <padding>
         <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
@@ -30,7 +32,8 @@
         <TextField fx:id="ComapnyName" GridPane.columnIndex="1" />
         <TextField fx:id="PhoneNumber" GridPane.columnIndex="1" GridPane.rowIndex="1" />
         <Spinner fx:id="CVV" prefWidth="2000.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-        <TextField fx:id="CreditCard"  GridPane.columnIndex="1" GridPane.rowIndex="3"/>
-        <Button fx:id="updateButton" mnemonicParsing="false" onAction="#updateClick" prefWidth="Infinity" text="update" GridPane.columnSpan="2" GridPane.rowIndex="3" />
+        <CheckBox fx:id="KidHave" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+        <Button fx:id="updateButton" mnemonicParsing="false" onAction="#updateClick" prefWidth="Infinity" text="update" GridPane.columnSpan="2" GridPane.rowIndex="4" />
+      <Label text="Kid: " GridPane.rowIndex="3" />
     </children>
 </GridPane>
